--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
     </section>
     <section id="project">
         <div class="project_container">
-            project
+            <h2 class="header2">Projects</h2>
+            <p class="p_project">Here are some projects that made. i will add more in the future feel free to check!<br><hr ></p>
+        </div>
+        <div>
+            <a href="#" class="content_in_project"> Bank System UI </a>
+            <a href="#" class="content_in_project"> Contact Search </a>
+            <a href="#" class="content_in_project"> File Organizer </a>
         </div>
     </section>
     <script src="script.js"></script>
