--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="logo">Paul</div>
             <nav id="desktop-nav">
                 <ul class="nav-links">
-                    <li><a class = "ey" href="#home">Home</a></li>
+                    <li><a class = "ey" href="#profile">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#project">Project</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <nav id="hamburger-nav">
-                <a href="#home" class = "ey">Home</a>
+                <a href="#profile" class ="ey">Home</a>
                 <div class="hamburger-menu">
                     <div class="hamburger-icon" onclick="toggleMenu()">
                         <span></span>
