--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="contact.css">
 </head>
+
 <body>
     <header>
         <div class="logo">Paul</div>
@@ -21,6 +22,7 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+
             <nav id="hamburger-nav">
                 <a href="#profile" class ="ey">Home</a>
                 <div class="hamburger-menu">
@@ -37,6 +39,7 @@
                 </div>
             </nav>
     </header>
+
     <section id="profile">
         <div class="homepage_container">
             <div class="section_pic-container">
@@ -52,12 +55,9 @@
         </div>
     </section>
 
-
-
     <section id="about">
         <div class="about_container">
             <div class="container1">
-
                 <div class="gif">
                     <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724450256/portfolio%20images/wuroohyjpgwxhuheryf2.gif" alt="for_about">
                 </div>
@@ -68,24 +68,41 @@
                     box1
                 </div>
                 <div class="education_container">
-                    Education
+                    <p class="white_text">Education</p>
+                    <p class="oblique_text">College of Mary Immaculate</p>
+                    <p class="normal_text">Bachelor of Science in Computer Science</p>
+
                 </div>
-
             </div>
-
-
-
             <div class="container2">
                 <div class="aboutme_container">
-                    About me
+                    <p class="black_text">About me</p>
+                    <a href="#" target="_blank">
+                        <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565155/portfolio%20images/sewehgecqghafxpkgqem.png" alt="another_page">
+                    </a> 
+                    <p class="clickme">Click me!</p>
                 </div>
                 <div class="skillset_container">
-                    Skillset
+                    <p class="white_text">Skillset</p>
+                    <hr>
+                    <p class="oblique_text">Language</p>
+                    <ul class="normal_text">
+                        <li>Html/CSS</li>
+                        <li>Javascript</li>
+                        <li>Python</li>
+                    </ul>
+                    <hr>
+                    <p class="oblique_text">Tools</p>
+                    <ul class="normal_text">
+                        <li>Canva</li>
+                        <li>Figma</li>
+                    </ul>
+
+
                 </div>
             </div>
         </div>
     </section>
-
 
     <section id="project">
         <div class="project_container">
@@ -110,7 +127,9 @@
                 </div>
                 <hr>
                 <div class="social-icons">
-                    <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565129/portfolio%20images/su6esuhc2l6kwjjewfin.svg" alt="Instagram"> 
+                    <a href="#" target="_blank">
+                        <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565129/portfolio%20images/su6esuhc2l6kwjjewfin.svg" alt="Instagram">
+                    </a> 
                     <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565129/portfolio%20images/rvxcz3p67b5pv8u6er2x.svg" alt="Facebook">
                     <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565129/portfolio%20images/tz4s4ys97womd4ibtfn3.svg" alt="GitHub">
                 </div>
