--- a/about_page.html
+++ b/about_page.html
@@ -8,13 +8,13 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html" target="_blank">
-                <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565155/portfolio%20images/sewehgecqghafxpkgqem.png" alt="another_page">
+            <a href="index.html">
+                <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565155/portfolio%20images/sewehgecqghafxpkgqem.png">
             </a> 
         </div>
         <div class="container">
             <div class="image_container">
-                <img class="chess_image" src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724992164/portfolio%20images/upop0blyvmd8mm2xeaxn.jpg" alt="for_about">
+                <img class="chess_image" src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724992164/portfolio%20images/upop0blyvmd8mm2xeaxn.jpg">
 
             </div>
             <div class="text_container">
