--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="container2">
                 <div class="aboutme_container">
                     <p class="black_text">About me</p>
-                    <a href="about_page.html" target="_blank">
+                    <a href="about_page.html">
                         <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565155/portfolio%20images/sewehgecqghafxpkgqem.png" alt="another_page">
                     </a> 
                     <p class="clickme">Click me!</p>
