--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
                     <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724450256/portfolio%20images/wuroohyjpgwxhuheryf2.gif" alt="for_about">
                 </div>
                 <div class="box2">
-                    box2
+                    <div class="q_text">
+                        <q>Testing leads to failure, and failure leads to understanding. </q> - Burt Rutan
+                    </div>
                 </div>
                 <div class="box1">
-                    box1
+                    <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1725032753/portfolio%20images/br2eqjrhu2uc6ylwiorg.gif" alt="blue">
                 </div>
                 <div class="education_container">
                     <p class="white_text">Education</p>
@@ -110,9 +112,9 @@
             <p class="p_project">Here are some projects that made. i will add more in the future feel free to check!<br><hr></p>
 
             <div class="project_menu">
-                <a href="#" class="content_in_project"> Bank System UI <span> &#129104; </span></a>
-                <a href="#" class="content_in_project"> Contact Search <span> &#129104; </span></a>
-                <a href="#" class="content_in_project"> File Organizer <span> &#129104; </span></a>
+                <a href="https://github.com/college-of-mary-immaculate/bodino-johnpaul/tree/main/activities/BANK-UI" class="content_in_project"> Bank System UI <span> &#129104; </span></a>
+                <a href="https://github.com/nathanielfaborada/Contact-Search" class="content_in_project"> Contact Search <span> &#129104; </span></a>
+                <a href="https://github.com/college-of-mary-immaculate/FileSorter" class="content_in_project"> File Organizer <span> &#129104; </span></a>
             </div>
         </div>
         
@@ -122,16 +124,22 @@
             <h3>Contact me!</h3>
             <div class="contact-details">
                 <div class="email">
-                    <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565130/portfolio%20images/q9xvjwnq4xyigncoqxnn.svg" alt="Email Icon">
-                    <p>johnpaulbodino49@gmail.com</p>
+                    <a href="mailto:johnpaulbodino@gmail.com" target="_blank">
+                        <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565130/portfolio%20images/q9xvjwnq4xyigncoqxnn.svg" alt="Email Icon">
+                    </a>
+                        <p>johnpaulbodino49@gmail.com</p>
                 </div>
                 <hr>
                 <div class="social-icons">
-                    <a href="#" target="_blank">
+                    <a href="https://www.instagram.com/bodinojohnpaul?igsh=cWh2cHIyNTlkdjF1" target="_blank">
                         <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565129/portfolio%20images/su6esuhc2l6kwjjewfin.svg" alt="Instagram">
                     </a> 
-                    <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565129/portfolio%20images/rvxcz3p67b5pv8u6er2x.svg" alt="Facebook">
-                    <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565129/portfolio%20images/tz4s4ys97womd4ibtfn3.svg" alt="GitHub">
+                    <a href="https://www.facebook.com/paul.plamianobodino" target="_blank">
+                        <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565129/portfolio%20images/rvxcz3p67b5pv8u6er2x.svg" alt="Facebook">
+                    </a>
+                    <a href="https://github.com/johnpaul-bodino" target="_blank">
+                        <img src="https://res.cloudinary.com/dda8q97x2/image/upload/v1724565129/portfolio%20images/tz4s4ys97womd4ibtfn3.svg" alt="GitHub">
+                    </a>
                 </div>
             </div>
         </div>
